ptyfwd: reset nonblocking mode

Apparently bash doesn't turn off non-blocking mode on stdin/stdout when
reading from it, so be nice to bash. Ideally bash would do this on its
own for robustness reasons, though.

https://bugs.freedesktop.org/show_bug.cgi?id=70622